fix conversation assembler including excluded conversation